# PhaseBO

./: .gitignore  .gitmodules  BO_Path_in_Li-Sn-S-Cl.txt  CHANGELOG.md  LICENSE  LiSiSF_xtalopt.csv  LiSnSCl_700eV.csv  README.md  TODO  authorize  bo_libsi_example.py  candidates_list.csv  example_logfile  exclude_list.csv  input.py  input_config.yaml  lisisf_input.py  logfile-Mar-09-2021_1134  pullFromMP.py  pyproject.toml  setup.py
data/: LiSnSCl_700eV.csv
example/: posterior_Jul-11-2025_1101.csv
phase_fields_bo/: __init__.py  __main__.py  list_compositions.py  phase_field.py  phase_field_bo.py
phasebo/: BO_Path_in_Li-Sn-S-Cl.txt  __main__.py  list_compositions.py  logger.py  phase_field.py  phase_field_bo.py
phasebo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: candidates_list.csv  test_phase_field.py
tests/CCollins/: bo_ref_data.csv  input_3.py
tests/LiMgAlPO/: BO_Path_in_Li-Mg-Al-P-O.txt  Li-Mg-Al-P-O.csv  Li-Mg-Al-P-O.xlsx  LiMgAlPO_forBO.csv  Reference.csv  ave  find_BO_path.py  input.py  preprocess_data.py  random_path.py
tests/clean/: convexhull.py  initialise.py  list_compositions.py  plotter.py
tests/example_results/: 9_seeds
tests/zeng/: bayesian.csv  zeng.py
